# sonos_moments

./: .gitignore  .pre-commit-config.yaml  .syncignore  LICENSE  README.md  app.py  main.py  pyproject.toml  sonos_moments.code-workspace  sync.py
.github/workflows/: publish.yml
sonos_moments/: __init__.py  app.py  moments.py  speakers.py  version.py
sonos_moments/model/: __init__.py  device.py  group.py  moment.py  system.py
sonos_moments/ui/: __init__.py  moments.py  speakers.py
