[tool.poetry]
name = "sonos-moments"
version = "0.1.2-dev"
description = "Sonos Controller based on NiceGUI"
authors = ["Falko Schindler <mail@falkoschindler.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
dataclasses-json = "^0.6.7"
nicegui = "^1.4.29"
python = "^3.11"
soco = "^0.30.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.3"

[tool.poetry.scripts]
sonos-moments = "sonos_moments.app:main_without_reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]

[[tool.mypy.overrides]]
module = "soco.*"
ignore_missing_imports = true

[tool.ruff]
indent-width = 4
line-length = 120

[tool.ruff.lint]
select = [
    "I",  # isort
    "E",  # pycodestyle
    "W",  # pycodestyle
    "B",  # bugbear
    "F",  # pyflakes
    "UP", # pyupgrade
    "RUF", # ruff
    "PL", # pylint
]
fixable = [
    "I",  # isort
]
ignore = [
    "E501", # line too long
    "PLR2004", # magic value comparison
]
